--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </style>
 </head>
 <body>
-    <div class="kapil"> Jock Script (Refresh It and Find Now Jock) </div>
-    <div id="jock"><h3>This is my simple Jock</h3></div>
+    <div class="kapil"> Jokes Script (Refresh It and Find Now Jock) </div>
+    <div id="jock"><h3>This is my simple Joke</h3></div>
     <script src="script1.js"></script>
     
 </body>
